refactor: typehint robot_utils

--- a/amiga-app/mypy.ini
+++ b/amiga-app/mypy.ini
@@ -3,3 +3,6 @@ ignore_missing_imports = False
 
 [mypy-farm_ng.*]
 ignore_missing_imports = True
+
+[mypy-farm_ng_core_pybind]
+ignore_missing_imports = True
