--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -27,5 +27,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run mypy
-        run: 
+        run: |
+          pip install mypy
           PYTHONPATH=backend mypy --disallow-untyped-defs backend/*.py
