--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -59,7 +59,8 @@ jobs:
         run: |
           cd amiga-app/
           python3 -m venv .venv
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
+          pip install farm_ng_amiga-2.3.4-py3-none-any.whl
           pip install -r requirements.txt
 
       - name: Run backend
