--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Serve build and ping
         run: |
-          cd amiga-app/dist
+          cd amiga-app/ts/dist
           http-server -p 8080 > /dev/null 2>&1 &
           SERVER_PID=$!
 
