--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -61,6 +61,24 @@ jobs:
           pip install farm_ng_amiga-2.3.4-py3-none-any.whl
           pip install -r requirements.txt
 
+      - name: Add mock manifest
+        run: |
+          cd amiga-app/
+          echo '{
+            "services": {
+              "example-app": {
+                "name": "amiga-app",
+                "type": "app",
+                "args": [
+                  "--config /opt/farmng/config.json", "--port 8042"
+                ],
+                "autostart": true,
+                "http_gui_port": 8042,
+                "display_name": "Monitor App"
+              }
+            }
+          }' > manifest.json
+
       - name: Run backend
         run: |
           cd amiga-app/
