--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -69,6 +69,11 @@ jobs:
     name: Serve Backend
     needs: build_frontend
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        mode: ["", "--debug", "--desktop", "--desktop --debug"]
+
     steps:
       - uses: actions/checkout@v3
 
@@ -116,46 +121,28 @@ jobs:
             }
           }' > manifest.json
 
-      - name: Run backend
-        continue-on-error: true
+      - name: "Run backend with flags: ${{ matrix.mode }}"
         run: |
           cd amiga-app/backend
           source ../.venv/bin/activate
-          python3 main.py
-          exit_code=$?
-          if [ $exit_code -ne 3 ]; then
-            echo "Backend exited with unexpected code: $exit_code"
-            exit $exit_code
-          else
-            echo "Backend exited with code $exit_code (acceptable)"
-          fi
+          echo "Running with flags: ${{ matrix.mode }}"
+          python3 main.py ${{ matrix.mode }} &
+          PID=$!
 
-      - name: Run backend in debug mode
-        continue-on-error: true
-        run: |
-          cd amiga-app/backend
-          source ../.venv/bin/activate
-          python3 main.py --debug
-          exit_code=$?
-          if [ $exit_code -ne 3 ]; then
-            echo "Backend exited with unexpected code: $exit_code"
-            exit $exit_code
+          # Determine expect_ping from mode string
+          if echo "${{ matrix.mode }}" | grep -q -- '--desktop'; then
+            echo "Expecting ping on localhost:8042..."
+            sleep 15
+            curl --fail http://localhost:8042 || (echo "Ping failed!" && kill $PID && exit 1)
+            kill $PID
           else
-            echo "Backend exited with code $exit_code (acceptable)"
+            wait $PID
+            exit_code=$?
+            if [ $exit_code -ne 3 ]; then
+              echo "Expected exit code 3, got $exit_code"
+              exit $exit_code
+            else
+              echo "Got expected exit code 3"
+            fi
           fi
-
-      - name: Run backend-desktop
-        run: |
-          cd amiga-app/backend
-          source ../.venv/bin/activate
-          python3 main.py --desktop
-          sleep 15
-          curl --fail http://localhost:8042 || (echo "Backend desktop ping failed!" && exit 1)
-      - name: Run backend-desktop in debug mode
-        run: |
-          cd amiga-app/backend
-          source ../.venv/bin/activate
-          python3 main.py --desktop --debug
-          sleep 15
-          curl --fail http://localhost:8042 || (echo "Backend desktop debug ping failed!" && exit 1)
-          
+            
