--- a/.github/workflows/camera-backend_test.yml
+++ b/.github/workflows/camera-backend_test.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           python-version: 3.11.x
           architecture: x64
+          lfs: 'true'
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install packages
