--- a/.github/workflows/camera-backend_test.yml
+++ b/.github/workflows/camera-backend_test.yml
@@ -18,12 +18,10 @@ jobs:
         with:
           python-version: 3.11.x
           architecture: x64
-          lfs: 'true'
-      - name: checkoutLFS
-        uses: actions/checkout@v2
-        run: git lfs pull
       - name: Checkout
         uses: actions/checkout@v3
+        with: 
+          lfs: 'true'
       - name: Install packages
         run: |
           cd amiga-app/
