--- a/.github/workflows/camera-backend_test.yml
+++ b/.github/workflows/camera-backend_test.yml
@@ -3,10 +3,11 @@ on:
   push:
     paths:
       - 'amiga-app/backend/cameraBackend/**'
+      - 'amiga-app/backend/tests**'
   pull_request:
     paths:
       - 'amiga-app/backend/cameraBackend/**'
-
+      - 'amiga-app/backend/tests**'
 jobs:
   test:
     name: Tests
@@ -19,6 +20,8 @@ jobs:
           architecture: x64
       - name: Checkout
         uses: actions/checkout@v3
+        with: 
+          lfs: 'true'
       - name: Install packages
         run: |
           cd amiga-app/
