--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build_frontend:
     name: Build Frontend
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       artifact-name: frontend-dist
     steps:
