--- a/.github/workflows/camera-backend_test.yml
+++ b/.github/workflows/camera-backend_test.yml
@@ -22,6 +22,23 @@ jobs:
         uses: actions/checkout@v3
         with: 
           lfs: 'true'
+      - name: Mock manifest
+        run: |
+          cd amiga-app/
+          echo '{
+            "services": {
+              "example-app": {
+                "name": "amiga-app",
+                "type": "app",
+                "args": [
+                  "--config /opt/farmng/config.json", "--port 8042"
+                ],
+                "autostart": true,
+                "http_gui_port": 8042,
+                "display_name": "Monitor App"
+              }
+            }
+          }' > manifest.json
       - name: Install packages
         run: |
           cd amiga-app/
