--- a/amiga-app/mypy.ini
+++ b/amiga-app/mypy.ini
@@ -1,8 +1,8 @@
 [mypy]
-ignore_missing_imports = False
-
-[mypy-farm_ng.*]
+warn_unused_configs = True
 ignore_missing_imports = True
-
-[mypy-farm_ng_core_pybind]
-ignore_missing_imports = True
+check_untyped_defs = True
+explicit_package_bases = True
+warn_unreachable = True
+warn_redundant_casts = True
+strict_equality = True
