--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -31,4 +31,4 @@ jobs:
         run: |
           cd amiga-app/
           source .venv/bin/activate
-          PYTHONPATH=backend mypy --disallow-untyped-defs backend/*.py
+          mypy backend/*.py
