--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -86,7 +86,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11.x
+          python-version: 3.11.9
 
       - name: Cache pip
         uses: actions/cache@v3
