fix: version python packages dependency drift (#62)
* fix: depthai version

* chore: version all packages

was screwing with ci

--- a/amiga-app/requirements.txt
+++ b/amiga-app/requirements.txt
@@ -1,10 +1,10 @@
-farm-ng-amiga
-fastapi
-uvicorn[standard]
-depthai
-opencv-python
+farm-ng-amiga==2.3.4
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+depthai==2.30.0.0
+opencv-python==4.11.0.86
 open3d==0.18.0
-DracoPy
-numpy<2.0.0
-mypy
-pytest
+DracoPy==1.5.0
+numpy==1.26.4
+mypy==1.17.1
+pytest==8.4.2
