--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -121,51 +121,17 @@ jobs:
             }
           }' > manifest.json
 
-      - name: "Run backend robot mode"
+      - name: "Run backend"
         continue-on-error: true
         run: |
           cd amiga-app/backend
           source ../.venv/bin/activate
-          echo "Running with flags: ${{ matrix.mode }}"
-          python3 main.py ${{ matrix.mode }} &
+          echo "Running with flags: ${{ matrix.mode }} --config config.json"
+          python3 main.py ${{ matrix.mode }} --config config.json &
           PID=$!
 
-          # Wait up to 30 seconds for the process to exit
-          for i in {1..30}; do
-            if ! kill -0 $PID 2>/dev/null; then
-              break
-            fi
+          for i in {1..10}; do
+            curl --fail http://localhost:8042/health && break
             sleep 1
-          done
-
-          if kill -0 $PID 2>/dev/null; then
-            echo "Process did not exit after 30 seconds, killing..."
-            kill $PID
-            wait $PID
-            exit 1
-          else
-            wait $PID
-            exit_code=$?
-            if [ $exit_code -ne 3 ]; then
-              echo "Expected exit code 3, got $exit_code"
-              exit $exit_code
-            else
-              echo "Got expected exit code 3"
-            fi
-          fi
-
-      - name: "Run backend desktop mode"
-        run: |
-          cd amiga-app/backend
-          source ../.venv/bin/activate
-          echo "Running with flags: ${{ matrix.mode }}"
-          python3 main.py ${{ matrix.mode }} --desktop &
-          
-          sleep 15
-          if ! curl --fail http://localhost:8042/openapi.json; then
-            echo "Ping failed!"
-            exit 1
-          else
-            echo "Ping successful!"
-          fi
-            
+          done || (echo "Ping failed!" && exit 1)
+          kill $PID
