--- a/.github/workflows/szdiff.yml
+++ b/.github/workflows/szdiff.yml
@@ -76,9 +76,12 @@ jobs:
       - name: Count Line Diff
         run: |
           pip install tabulate
-          BASE="$GITHUB_WORKSPACE/amiga/app/amiga-app/backend"
+          BASE="$GITHUB_WORKSPACE/base/amiga-app/backend"
           PR="$GITHUB_WORKSPACE/pr/amiga-app/backend"
+          
+          # Copy sz.py from base
           cp "$BASE/sz.py" .
+          
           echo "loc_content<<EOF" >> "$GITHUB_ENV"
           python sz.py "$BASE" "$PR" >> "$GITHUB_ENV"
           echo "EOF" >> "$GITHUB_ENV"
