--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-black
+farm-ng-amiga==2.3.4
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+depthai==2.30.0.0
+opencv-python==4.11.0.86
+open3d==0.18.0
+DracoPy==1.5.0
+numpy==1.26.4
+mypy==1.17.1
+pytest==8.4.2
+ruff==0.13.0
+tabulate==0.9.0
+types-tabulate==0.9.0
