exclude multi cam calibration from mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,4 +6,4 @@ explicit_package_bases = True
 warn_unreachable = True
 warn_redundant_casts = True
 strict_equality = True
-exclude = (backend/sz\.py|backend/cameraBackend/.*|backend/routers/.*)
+exclude = (backend/sz\.py|backend/cameraBackend/.*|backend/routers/.*|multi-cam-calibration/.)
