--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -1,13 +1,11 @@
-name: Test cameraBackend
+name: Test Backend
 on:
   push:
     paths:
-      - 'backend/cameraBackend/**'
-      - 'backend/tests**'
+      - 'backend/**'
   pull_request:
     paths:
-      - 'backend/cameraBackend/**'
-      - 'backend/tests**'
+      - 'backend/**'
 jobs:
   test:
     name: Tests
